src/objects/Flow_Session__c.object
<CustomObject>
    <description>Stores the custom data input during the Flow Interview and can be used to distribute data to other objects as needed</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact whom initiated the flow</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Flow Sessions</relationshipLabel>
        <relationshipName>Flow_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Name + &apos; [&apos; + TEXT(Status__c) + &apos;] - &apos; + LEFT(TEXT(CreatedDate), 16)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_API_Name__c</fullName>
        <label>Flow API Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                    <default>true</default>
                    <label>Not Specified</label>
                </value>
                <value>
                    <fullName>Neutrois</fullName>
                </value>
                <value>
                    <fullName>Agender</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>MailingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>MailingCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>MailingPostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>MailingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>MailingStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome_STAGE</fullName>
                    <default>true</default>
                    <label>Welcome</label>
                </value>
                <value>
                    <fullName>Person_Details_STAGE</fullName>
                    <label>Person_Details</label>
                </value>
                <value>
                    <fullName>Select_Sessions_STAGE</fullName>
                    <label>Select Sessions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Validating</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Two_Factor_Authentication_Code__c</fullName>
        <description>Used to store the temporary randomly generated Two Factor Authentication Code for when it is requested</description>
        <inlineHelpText>Temporary Storage of the Two Factor Authentication Code. The code is generated when requested.</inlineHelpText>
        <label>Two Factor Authentication Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Two_Factor_Authentication_Expiry__c</fullName>
        <label>Two Factor Authentication Expiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user whom initiated the Flow</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Flow_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Flow Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Two_Factor_Authentication_Code__c</columns>
        <columns>Two_Factor_Authentication_Expiry__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Flow Session-{00000}</displayFormat>
        <label>Flow Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>